--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exchange_backend",
   "version": "1.0.0",
   "description": "NONE",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,10 +23,15 @@
   },
   "homepage": "https://github.com/Banwind/exchange_backend#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^7.5.0",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0"
   }
 }
