--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 FACEBOOK_ID=SKIP
 FACEBOOK_SECRET=SKIP
 FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
-SESSION_SECRET=ThisIsMySecret
-MONGODB_URI=mongodb://localhost/restaurant
+JWT_SECRET=SKIP
+MONGODB_URI=SKIP
 PORT=3000
