--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NONE",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "mongoose": "^7.5.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
 }
