--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NONE",
   "main": "app.js",
   "scripts": {
-    "serve": "nodemon app.js",
+    "serve": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node models/seeds/seeder.js"
   },
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/Banwind/exchange_backend#readme",
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
