--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-FACEBOOK_ID=SKIP
-FACEBOOK_SECRET=SKIP
-FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
 JWT_SECRET=SKIP
 MONGODB_URI=SKIP
 PORT=3000
+webhookURL=SKIP
+```
